[project]
name = "psitorch"
version = "0.1.0"
description = ""
authors = [
    {name = "Eslam-Sabry",email = "islam69010@stemegypt.edu.eg"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
